[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/Minigames/Stack/Box.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Minigames/Stack.gd" type="Script" id=2]
[ext_resource path="res://assets/Minigames/SupportPallet.png" type="Texture" id=3]
[ext_resource path="res://assets/Keys/XButton.png" type="Texture" id=4]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/Objects/Clipboard.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.45098 )

[sub_resource type="StreamTexture" id=13]
flags = 4
load_path = "res://.import/Box.png-7ddde33a7ad93770c050f8e72a057b52.stex"

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250, 30 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.45098 )
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=9]
Button/styles/disabled = null
Button/styles/focus = SubResource( 18 )
Button/styles/hover = SubResource( 19 )
Button/styles/normal = SubResource( 20 )
Button/styles/pressed = SubResource( 21 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 640, 27 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 5 )

[node name="Stack" type="Node2D"]
script = ExtResource( 2 )

[node name="Darkener" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 8 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
texture = SubResource( 13 )
patch_margin_left = 12
patch_margin_top = 13
patch_margin_right = 15
patch_margin_bottom = 11

[node name="Pallet" type="StaticBody2D" parent="."]
position = Vector2( 630, 650 )
scale = Vector2( 1, 0.5 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallet"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Pallet"]
texture = ExtResource( 3 )

[node name="Box" parent="." instance=ExtResource( 1 )]

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 1030.0
margin_top = 85.0
margin_right = 1186.0
margin_bottom = 150.0
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "9999"

[node name="LoseScreen" type="Panel" parent="."]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
custom_styles/panel = SubResource( 11 )

[node name="Background2" type="NinePatchRect" parent="LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -155.0
margin_right = 295.0
margin_bottom = 155.0
texture = SubResource( 13 )
patch_margin_left = 12
patch_margin_top = 13
patch_margin_right = 15
patch_margin_bottom = 11

[node name="Lose" type="Label" parent="LoseScreen/Background2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -44.0
margin_bottom = 20.0
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="RestartButton" type="Button" parent="LoseScreen/Background2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 25.0
margin_bottom = 64.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../LanguageButton")
theme = SubResource( 9 )
custom_colors/font_color_focus = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color = Color( 0.988235, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.976471, 0.0392157, 1 )
custom_fonts/font = SubResource( 10 )

[node name="WinScreen" type="Panel" parent="."]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
custom_styles/panel = SubResource( 11 )

[node name="Background2" type="NinePatchRect" parent="WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -155.0
margin_right = 295.0
margin_bottom = 155.0
texture = SubResource( 13 )
patch_margin_left = 12
patch_margin_top = 13
patch_margin_right = 15
patch_margin_bottom = 11

[node name="Lose" type="Label" parent="WinScreen/Background2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -44.0
margin_bottom = 20.0
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="WinScreen/Background2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 25.0
margin_bottom = 64.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../LanguageButton")
theme = SubResource( 9 )
custom_colors/font_color_focus = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color = Color( 0.988235, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.976471, 0.0392157, 1 )
custom_fonts/font = SubResource( 10 )
text = "Continuar"

[node name="Floor" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 640, 692 )
shape = SubResource( 17 )

[node name="Clipboard" parent="." instance=ExtResource( 6 )]
margin_left = 870.0
margin_right = 1274.0

[node name="LevelText2" type="RichTextLabel" parent="Clipboard" groups=["LevelText"]]
margin_left = 64.0
margin_top = 219.0
margin_right = 347.0
margin_bottom = 373.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]Empilhe caixas no pallet para otimizar o armazenamento. É importante se atentar à centralização delas para distribuir o peso eficientemente.[/center]"
text = "Empilhe caixas no pallet para otimizar o armazenamento. É importante se atentar à centralização delas para distribuir o peso eficientemente."
fit_content_height = true

[node name="LevelText3" type="RichTextLabel" parent="Clipboard" groups=["LevelText"]]
margin_left = 87.0
margin_top = 378.0
margin_right = 339.0
margin_bottom = 466.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]Ao empilhar uma caixa, uma nova aparecerá, empilhe 10 corretamente para prosseguir[/center]"
text = "Ao empilhar uma caixa, uma nova aparecerá, empilhe 10 corretamente para prosseguir"
fit_content_height = true

[node name="Button" type="Button" parent="."]
margin_left = 1220.0
margin_top = 5.0
margin_right = 1272.0
margin_bottom = 46.0
icon = ExtResource( 4 )
flat = true

[connection signal="pressed" from="LoseScreen/Background2/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="WinScreen/Background2/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_ButtonX_pressed"]
